vDPA API change
The attribute vdpaType has been added to the policy
It can assume the following values:
- virtio
- vhost (not implemented)

Signed-off-by: Leonardo Milleri <lmilleri@redhat.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodepolicies.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodepolicies.yaml
@@ -112,6 +112,12 @@ spec:
               resourceName:
                 description: SRIOV Network device plugin endpoint resource name
                 type: string
+              vdpaType:
+                description: VDPA device type. Allowed value "virtio","vhost".
+                enum:
+                - virtio
+                - vhost
+                type: string
             required:
             - nicSelector
             - nodeSelector
